syntax = "proto3";
package user.v1;

import "organization/v1/organization.proto";


// User service for authentication and user management
service UserService {
  
  // Fetch user details
  rpc FetchUser(FetchUserRequest) returns (FetchUserResponse);
}

// Enums for user configuration
enum OnboardingStep {
  ONBOARDING_STEP_UNSPECIFIED = 0;
  ONBOARDING_STEP_ACTIVATED = 1;
  ONBOARDING_STEP_CONFIRMED = 2;
  ONBOARDING_STEP_ESTABLISHED = 3;
  ONBOARDING_STEP_COMPLETED = 4;
}

enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_OK = 1;
  USER_STATUS_SUSPENDED = 2;
  USER_STATUS_PENDING_VERIFICATION = 3;
  USER_STATUS_DELETED = 4;
}

enum AuthType {
  AUTH_TYPE_UNSPECIFIED = 0;
  AUTH_TYPE_EMAIL_PASSWORD = 1;
  AUTH_TYPE_GOOGLE_OAUTH = 2;
  AUTH_TYPE_GITHUB_OAUTH = 3;
  AUTH_TYPE_MICROSOFT_OAUTH = 4;
}

enum TwoFactorMethod {
  TWO_FACTOR_METHOD_UNSPECIFIED = 0;
  TWO_FACTOR_METHOD_SMS = 1;
  TWO_FACTOR_METHOD_TOTP = 2;
  TWO_FACTOR_METHOD_EMAIL = 3;
}

// Credit information
message Credit {
  string id = 1;
  string amount = 2;  // Decimal string representation
  string description = 3;
  string expires_at = 4;  // ISO 8601 timestamp
  string created_at = 5;  // ISO 8601 timestamp
}

// Two-factor authentication methods
message TwoFactorMethods {
  repeated TwoFactorMethod methods = 1;
}

// User representation
message User {
  int64 id = 1;
  string uuid = 2;
  string email = 3;
  string name = 4;
  string display_name = 5;  // Optional display name
  string location = 6;
  string phone_number = 7;
  int32 droplet_limit = 8;
  OnboardingStep onboarding_step = 9;
  bool newsletter_subscribed = 10;
  string balance = 11;  // Decimal string representation
  string credit = 12;   // Decimal string representation
  string usage_total = 13;  // Decimal string representation
  int32 droplet_count = 14;
  bool can_be_deleted = 15;
  bool in_bad_standing = 16;
  UserStatus status = 17;
  bool tfa_enabled = 18;
  string avatar = 19;  // URL to avatar image
  bool is_hold = 20;
  bool is_verified = 21;
  bool is_partner = 22;
  bool is_vendor = 23;
  bool is_paypal = 24;
  string onboarding_origin = 25;
  string payment_method = 26;
  string nav_message = 27;
  string created_at = 28;  // ISO 8601 timestamp
  string company = 29;
  TwoFactorMethods two_factor_methods = 30;
  bool has_secure_login = 31;
  bool is_trial = 32;
  AuthType authn_type = 33;
  int32 team_limit = 34;
  repeated Credit credits = 35;
  string bank_machine_result = 36;
  bool is_admin = 37;
  repeated organization.v1.Organization organizations = 38;  // User's organizations
}


// Fetch User
message FetchUserRequest {
 
}

message FetchUserResponse {
  User user = 1;
}